--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,6 +23,7 @@
   "POPOVER_BREWS_OPTION_DELETE": "Delete",
   "POPOVER_BREWS_OPTION_PHOTO_GALLERY": "Photo Gallery",
   "POPOVER_BREWS_OPTION_CUPPING": "Cupping",
+  "POPOVER_BREWS_OPTION_MAP_COORDINATES": "Show on map",
   "PAGE_BREWS_NO_ENTRIES": "No brew added yet",
   "PAGE_BREWS_NO_ARCHIVED_ENTRIES": "You didn't archive any brew yet",
   "CANT_START_NEW_BREW_TITLE": "Something is missing here ...",
@@ -56,6 +57,7 @@
   "PAGE_SETTINGS_DISPLAY_PAGING": "Paging",
   "PAGE_SETTINGS_STARTUP_VIEW": "Starting Page",
   "PAGE_SETTINGS_ANALYTICS_INFORMATION": "Enable Analytics?",
+  "PAGE_SETTINGS_TRACK_BREW_COORDINATES": "Save brew coordinates",
   "PAGE_STATISTICS_DIFFERENT_PREPARATION_METHOD": "Preparation Methods",
   "PAGE_STATISTICS_TOTAL_GROUND_BEANS": "Ground Beans Total",
   "PAGE_STATISTICS_MONEY_SPENT_FOR_COFFEE": "Money Spent for Beans",
@@ -369,5 +371,6 @@
   "EXTERNAL_STORAGE_NOT_SUPPORTED": "Sorry, external story is not supported",
   "BEANS_ARCHIVED": "Archived",
   "TAB_ARCHIVE": "Archive",
-  "TODAY": "Today"
+  "TODAY": "Today",
+  "PLEASE_WAIT": "Please wait..."
 }
