#130 - Added first fast repeat feature

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -24,6 +24,7 @@
   "POPOVER_BREWS_OPTION_PHOTO_GALLERY": "Fotogalerie",
   "POPOVER_BREWS_OPTION_CUPPING": "Verkosten",
   "POPOVER_BREWS_OPTION_MAP_COORDINATES": "Anzeigen auf Karte",
+  "POPOVER_BREWS_OPTION_FAST_REPEAT": "Schnelle Brühwiederholung",
   "PAGE_BREWS_NO_ENTRIES": "Du hast noch keinen Bezug hinzugefügt.",
   "PAGE_BREWS_NO_ARCHIVED_ENTRIES": "Du hast noch keinen Bezug archiviert.",
   "CANT_START_NEW_BREW_TITLE": "Ein Bezug nur mit Luft und Liebe?",
@@ -58,6 +59,7 @@
   "PAGE_SETTINGS_STARTUP_VIEW": "Startansicht",
   "PAGE_SETTINGS_ANALYTICS_INFORMATION": "Analytics erlauben?",
   "PAGE_SETTINGS_TRACK_BREW_COORDINATES": "Brühkoordinaten speichern",
+  "PAGE_SETTINGS_FAST_REPEAT": "Schnelle Brühwiederholung",
   "PAGE_STATISTICS_DIFFERENT_PREPARATION_METHOD": "Brühmethodiken",
   "PAGE_STATISTICS_TOTAL_GROUND_BEANS": "Vermahlene Bohnen",
   "PAGE_STATISTICS_MONEY_SPENT_FOR_COFFEE": "Geld für Kaffee ausgegeben",
