#133 - Added category for preparation to calculate BR and TDS rightly

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -374,5 +374,7 @@
   "BEANS_ARCHIVED": "Archiviert",
   "TAB_ARCHIVE": "Archiv",
   "PLEASE_WAIT": "Bitte warten...",
-  "TODAY": "Heute"
+  "TODAY": "Heute",
+  "PREPARATION_STYLE_POUR_OVER": "Pour Over",
+  "PREPARATION_STYLE_ESPRESSO": "Espresso"
 }
