#129 - Moved GPS to startup of brew to save time by saving

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -376,5 +376,6 @@
   "PLEASE_WAIT": "Bitte warten...",
   "TODAY": "Heute",
   "PREPARATION_STYLE_POUR_OVER": "Pour Over",
-  "PREPARATION_STYLE_ESPRESSO": "Espresso"
+  "PREPARATION_STYLE_ESPRESSO": "Espresso",
+  "PREPARATION_TYPE_STYLE": "Zubereitungsart"
 }
