--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -380,5 +380,6 @@
   "PREPARATION_STYLE_ESPRESSO": "Espresso",
   "PREPARATION_TYPE_STYLE": "Preparation style",
   "PAGE_SETTINGS_FAST_REPEAT_DESCRIPTION": "Activate a new menu entry - with this you can repeat the brew directly.",
-  "PAGE_SETTINGS_TRACK_BREW_COORDINATES_DESCRIPTION": "Save coordinates to each brew."
+  "PAGE_SETTINGS_TRACK_BREW_COORDINATES_DESCRIPTION": "Save coordinates to each brew.",
+  "UPDATE_TITLE": "Whats new"
 }
