--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -381,5 +381,12 @@
   "PREPARATION_TYPE_STYLE": "Zubereitungsart",
   "PAGE_SETTINGS_FAST_REPEAT_DESCRIPTION": "Aktiviert einen neuen Menüeintrag - über diesen kann die Brühung direkt wiederholt werden.",
   "PAGE_SETTINGS_TRACK_BREW_COORDINATES_DESCRIPTION": "Speichere die Koordinatien zu jeder Brühung.",
-  "UPDATE_TITLE": "Was gibt's neues"
+  "UPDATE_TITLE": "Was gibt's neues",
+  "NEXT": "Weiter",
+  "UPDATE_TEXT_TITLE_TITLE": {
+    "5.0.0": {
+      "TITLE": "Version 5.0: Das ist neu",
+      "DESCRIPTION": "Neues Layout, Neue Zubereitungsmethoden"
+    }
+  }
 }
