#112 - First bean information where add aswell for blends

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -82,6 +82,12 @@
   "BEAN_DATA_WEIGHT": "Gewicht",
   "BEAN_DATA_COST": "Kosten",
   "BEAN_DATA_NAME": "Name",
+  "BEAN_DATA_REGION": "Region",
+  "BEAN_DATA_FARM": "Farm",
+  "BEAN_DATA_FARMER": "Farmer",
+  "BEAN_DATA_ELEVATION": "Anbauhöhe",
+  "BEAN_DATA_HARVEST_TIME": "Erntezeit",
+  "BEAN_DATA_CERTIFICATION": "Bohnenzertifikat",
   "BREW_DATA_CUSTOM_BREW_TIME": "Uhrzeit (des Bezuges)?",
   "BREW_CREATION_DATE": "Uhrzeit (des Bezuges)",
   "REPEAT": "Wiederholen",
@@ -325,6 +331,12 @@
       "BEAN_DATA_AROMATICS": "Füge die Aromen hinzu",
       "BEAN_DATA_WEIGHT": "Gewicht der Bohnen",
       "BEAN_DATA_COST": "Wieviel haben die Bohnen gekostet?",
+      "BEAN_DATA_REGION": "Füge die Region hinzu",
+      "BEAN_DATA_FARM": "Füge die Farm hinzu",
+      "BEAN_DATA_FARMER": "Füge den Farmer hinzu",
+      "BEAN_DATA_ELEVATION": "In welcher Höhe wurde die Bohne angebaut",
+      "BEAN_DATA_HARVEST_TIME": "Wann wurde die Bohne geerntet?",
+      "BEAN_DATA_CERTIFICATION": "Füge das Bohnenzertifikat hinzu",
       "NOTES": "Füge Notizen zu deiner Bohne hinzu"
     }
   },
