--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -82,6 +82,12 @@
   "BEAN_DATA_WEIGHT": "Weight",
   "BEAN_DATA_COST": "Cost",
   "BEAN_DATA_NAME": "Name",
+  "BEAN_DATA_REGION": "Region",
+  "BEAN_DATA_FARM": "Farm",
+  "BEAN_DATA_FARMER": "Farmer",
+  "BEAN_DATA_ELEVATION": "Elevation",
+  "BEAN_DATA_HARVEST_TIME": "Harvest time",
+  "BEAN_DATA_CERTIFICATION": "Bean certification",
   "BREW_DATA_CUSTOM_BREW_TIME": "Custom Brewing Time",
   "BREW_CREATION_DATE": "Creation Date",
   "REPEAT": "Repeat",
@@ -325,6 +331,12 @@
       "BEAN_DATA_AROMATICS": "Add flavors",
       "BEAN_DATA_WEIGHT": "Weight of the beans",
       "BEAN_DATA_COST": "How much did the beans cost?",
+      "BEAN_DATA_REGION": "Add the region",
+      "BEAN_DATA_FARM": "Add the farm",
+      "BEAN_DATA_FARMER": "Add the farmer",
+      "BEAN_DATA_ELEVATION": "In which elevation was the bean grown",
+      "BEAN_DATA_HARVEST_TIME": "In which time was the bean harvested?",
+      "BEAN_DATA_CERTIFICATION": "Add the bean certification",
       "NOTES": "Add notes about these beans"
     }
   },
