--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -296,7 +296,7 @@
   "TOAST_BEAN_ARCHIVED_SUCCESSFULLY": "Bohne archiviert",
   "TOAST_MILL_ARCHIVED_SUCCESSFULLY": "Mühle archiviert",
   "TOAST_PREPARATION_ARCHIVED_SUCCESSFULLY": "Brühmethode archiviert",
-  "BEAN_WEIGHT_ALREADY_USED": "<b>{{gramUsed}}g</b> von {{gramTotal}}g aufgebraucht",
+  "BEAN_WEIGHT_ALREADY_USED": "<span style='color:#B88265'>aa{{gramUsed}}g</span> von <span style='color:#B88265'>{{gramTotal}}g</span><br/>verbraucht",
   "PREPARATION_TYPE_CUSTOM_PREPARATION": "Eigene Brühmethodik",
   "PREPARATION_TYPE_AEROPRESS": "Aeropress",
   "PREPARATION_TYPE_V60": "V60",
@@ -374,11 +374,10 @@
       "BREW_DATA_BREW_BEVERAGE_QUANTITY": "Füge die engültige Getränkemenge hinzu"
     }
   },
-  "NO_BREW": "0 Brühungen",
-  "ONE_BREW": "Eine Brühung",
-  "MULTIPLE_BREWS": "{{count}} Brühungen",
-  "ROAST_DAYS_OLD": "{{days}} Tage alt",
-  "ROAST_DAY_OLD": "Einen Tag alt",
+  "ONE_BREW": "mal<br/>gebrüht",
+  "MULTIPLE_BREWS": "male<br/>gebrüht",
+  "ROAST_DAYS_OLD": "Tage<br/>alt",
+  "ROAST_DAY_OLD": "Tag<br/>alt",
   "CUPPING_BREW": "Verkostung",
   "COFFEE_DRUNKEN_QUANTITY": "Getrunkene Menge",
   "IMAGE_DELETED": "Bild wurde gelöscht",
