--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -296,7 +296,7 @@
   "TOAST_BEAN_ARCHIVED_SUCCESSFULLY": "Bean description has been archived",
   "TOAST_MILL_ARCHIVED_SUCCESSFULLY": "Grinder has been archived",
   "TOAST_PREPARATION_ARCHIVED_SUCCESSFULLY": "Preparation method has been archived",
-  "BEAN_WEIGHT_ALREADY_USED": "<b>{{gramUsed}}g</b> of {{gramTotal}}g used",
+  "BEAN_WEIGHT_ALREADY_USED": "<b>{{gramUsed}}g</b> of {{gramTotal}}g<br/>used",
   "PREPARATION_TYPE_CUSTOM_PREPARATION": "Custom preparation method",
   "PREPARATION_TYPE_AEROPRESS": "Aeropress",
   "PREPARATION_TYPE_V60": "V60",
@@ -374,11 +374,10 @@
       "BREW_DATA_BREW_BEVERAGE_QUANTITY": "Add result of beverage quantity"
     }
   },
-  "NO_BREW": "0 brews",
-  "ONE_BREW": "One brew",
-  "MULTIPLE_BREWS": "{{count}} brews",
-  "ROAST_DAYS_OLD": "{{days}} days old",
-  "ROAST_DAY_OLD": "One day old",
+  "ONE_BREW": "time<br/>brewed",
+  "MULTIPLE_BREWS": "times<br/>brewed",
+  "ROAST_DAYS_OLD": "days<br/>old",
+  "ROAST_DAY_OLD": "day<br/>old",
   "CUPPING_BREW": "Cupping",
   "COFFEE_DRUNKEN_QUANTITY": "Coffee Drunk",
   "IMAGE_DELETED": "Image has been deleted",
