--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -392,6 +392,7 @@
   "PREPARATION_TYPE_STYLE": "Zubereitungsart",
   "PAGE_SETTINGS_FAST_REPEAT_DESCRIPTION": "Aktiviert einen neuen Menüeintrag - über diesen kann die Brühung direkt wiederholt werden.",
   "PAGE_SETTINGS_TRACK_BREW_COORDINATES_DESCRIPTION": "Speichere die Koordinatien zu jeder Brühung.",
+
   "UPDATE_TITLE": "Was gibt's neues",
   "NEXT": "Weiter",
   "UPDATE_TEXT_TITLE_TITLE": {
@@ -399,5 +400,14 @@
       "TITLE": "Version 5.0: Das ist neu",
       "DESCRIPTION": "Neues Layout, Neue Zubereitungsmethoden"
     }
-  }
+  },
+  "CUSTOM_PARAMETERS": "Parameter individualisieren",
+  "CUSTOM_DEFAULT_PARAMETERS": "Vorbelegung",
+  "CUSTOM_MANAGE_PARAMETERS": "Verwalten",
+  "CUSTOM_SORT_PARAMETERS": "Sortieren",
+  "BREW_PARAMETER_CUSTOMIZE_TITLE": "Individuelle Parameter pro Zubereitungsart",
+  "BREW_PARAMETER_CUSTOMIZE_DESCRIPTION": "Du willst für einzelne Zubereitungsarten verschiedene Parameter festlegen? Navigiere dazu zum Menüpunkt \"Zubereitung\", öffne das Menü der entsprechenden Zubereitungsart und klicke auf \"Parameter individualisieren\". Lege nun fest, welche Parameter nur für diese Zubereitungsmethode erfasst werden sollen!",
+  "BREW_DATA_BREW_QUANTITY_TOOLTIP": "Wassermenge nur für Filterkaffee",
+  "BREW_DATA_PREPARATION_METHOD_TOOLTIP": "Zubereitungsmethode wird nur individualisierbar wenn aktiviert"
+
 }
