--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -296,7 +296,7 @@
   "TOAST_BEAN_ARCHIVED_SUCCESSFULLY": "Bean description has been archived",
   "TOAST_MILL_ARCHIVED_SUCCESSFULLY": "Grinder has been archived",
   "TOAST_PREPARATION_ARCHIVED_SUCCESSFULLY": "Preparation method has been archived",
-  "BEAN_WEIGHT_ALREADY_USED": "<b>{{gramUsed}}g</b> of {{gramTotal}}g<br/>used",
+  "BEAN_WEIGHT_ALREADY_USED": "{{gramUsed}}g of {{gramTotal}}g",
   "PREPARATION_TYPE_CUSTOM_PREPARATION": "Custom preparation method",
   "PREPARATION_TYPE_AEROPRESS": "Aeropress",
   "PREPARATION_TYPE_V60": "V60",
@@ -305,6 +305,12 @@
   "PREPARATION_TYPE_PORTAFILTER": "Portafilter",
   "PREPARATION_TYPE_KALITA_WAVE": "Kalita Wave",
   "PREPARATION_TYPE_FRENCH_PRESS": "French Press",
+  "PREPARATION_TYPE_SWANNECK": "Swanneck",
+  "PREPARATION_TYPE_DRIPPER": "Dripper",
+  "PREPARATION_TYPE_DELTER_PRESS": "Delter Press",
+  "PREPARATION_TYPE_COLD_BREW": "Cold Brew",
+  "PREPARATION_TYPE_AEROPRESS_INVERTED": "Aeropress Inverted",
+  "PREPARATION_TYPE_TURKISH": "Turkish",
   "PREPARATION_TYPE_ADD_CUSTOM": "Add Custom Method",
   "CHOOSE_BEANS": "Select Beans",
   "CHOOSE_BEAN": "Select Bean",
@@ -374,10 +380,10 @@
       "BREW_DATA_BREW_BEVERAGE_QUANTITY": "Add result of beverage quantity"
     }
   },
-  "ONE_BREW": "time<br/>brewed",
-  "MULTIPLE_BREWS": "times<br/>brewed",
-  "ROAST_DAYS_OLD": "days<br/>old",
-  "ROAST_DAY_OLD": "day<br/>old",
+  "ROASTED_BEFORE": "Roasted before",
+  "DAY_OLD": "day old",
+  "DAYS_OLD": "days old",
+  "BEANS_AMOUNT_USED": "Consumed",
   "CUPPING_BREW": "Cupping",
   "COFFEE_DRUNKEN_QUANTITY": "Coffee Drunk",
   "IMAGE_DELETED": "Image has been deleted",
@@ -389,6 +395,8 @@
   "PLEASE_WAIT": "Please wait...",
   "PREPARATION_STYLE_POUR_OVER": "Pour Over",
   "PREPARATION_STYLE_ESPRESSO": "Espresso",
+  "PREPARATION_STYLE_FULL_IMMERSION": "Full Immersion",
+  "PREPARATION_STYLE_PERCOLATION": "Percolation",
   "PREPARATION_TYPE_STYLE": "Preparation style",
   "PAGE_SETTINGS_FAST_REPEAT_DESCRIPTION": "Activate a new menu entry - with this you can repeat the brew directly.",
   "PAGE_SETTINGS_TRACK_BREW_COORDINATES_DESCRIPTION": "Save coordinates to each brew.",
@@ -408,5 +416,6 @@
   "BREW_PARAMETER_CUSTOMIZE_TITLE": "Individuelle Parameter pro Zubereitungsart",
   "BREW_PARAMETER_CUSTOMIZE_DESCRIPTION": "Du willst für einzelne Zubereitungsarten verschiedene Parameter festlegen? Navigiere dazu zum Menüpunkt \"Zubereitung\", öffne das Menü der entsprechenden Zubereitungsart und klicke auf \"Parameter individualisieren\". Lege nun fest, welche Parameter nur für diese Zubereitungsmethode erfasst werden sollen!",
   "BREW_DATA_BREW_QUANTITY_TOOLTIP": "Amount of water just for filter coffee",
-  "BREW_DATA_PREPARATION_METHOD_TOOLTIP": "Preparation just customizeable when active"
+  "BREW_DATA_PREPARATION_METHOD_TOOLTIP": "Preparation just customizeable when active",
+  "PAGE_SETTINGS_GENERAL": "General settings"
 }
