#112 - Added more bean information

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -86,8 +86,12 @@
   "BEAN_DATA_FARM": "Farm",
   "BEAN_DATA_FARMER": "Farmer",
   "BEAN_DATA_ELEVATION": "Anbauhöhe",
-  "BEAN_DATA_HARVEST_TIME": "Erntezeit",
+  "BEAN_DATA_HARVEST_TIME": "Ernte",
   "BEAN_DATA_CERTIFICATION": "Bohnenzertifikat",
+  "BEAN_DATA_ROASTING_TYPE": "Rösttyp",
+  "BEAN_DATA_DECAFFEINATED": "Entkoffeiniert",
+  "BEAN_DATA_URL": "Webseite",
+  "BEAN_DATA_EAN": "EAN / Artikelnummer",
   "BREW_DATA_CUSTOM_BREW_TIME": "Uhrzeit (des Bezuges)?",
   "BREW_CREATION_DATE": "Uhrzeit (des Bezuges)",
   "REPEAT": "Wiederholen",
@@ -343,7 +347,11 @@
       "BEAN_DATA_FARMER": "Füge den Farmer hinzu",
       "BEAN_DATA_ELEVATION": "In welcher Höhe wurde die Bohne angebaut",
       "BEAN_DATA_HARVEST_TIME": "Wann wurde die Bohne geerntet?",
-      "BEAN_DATA_CERTIFICATION": "Füge das Bohnenzertifikat hinzu",
+      "BEAN_DATA_CERTIFICATION": "Füge das Bohnenzertifikat hinzu (Fairtrade, Bio)",
+      "BEAN_DATA_ROASTING_TYPE": "Füge den Rösttyp hinzu",
+      "BEAN_DATA_DECAFFEINATED": "Ist der Kaffee Entkoffeiniert",
+      "BEAN_DATA_URL": "Füge die Webseite hinzu",
+      "BEAN_DATA_EAN": "Füge die EAN oder Artikelnummer hinzu",
       "NOTES": "Füge Notizen zu deiner Bohne hinzu"
     }
   },
