--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -86,8 +86,12 @@
   "BEAN_DATA_FARM": "Farm",
   "BEAN_DATA_FARMER": "Farmer",
   "BEAN_DATA_ELEVATION": "Elevation",
-  "BEAN_DATA_HARVEST_TIME": "Harvest time",
+  "BEAN_DATA_HARVEST_TIME": "Harvested",
   "BEAN_DATA_CERTIFICATION": "Bean certification",
+  "BEAN_DATA_ROASTING_TYPE": "Roast type",
+  "BEAN_DATA_DECAFFEINATED": "Decaffeinated",
+  "BEAN_DATA_URL": "Website",
+  "BEAN_DATA_EAN": "EAN / Articlenumber",
   "BREW_DATA_CUSTOM_BREW_TIME": "Custom Brewing Time",
   "BREW_CREATION_DATE": "Creation Date",
   "REPEAT": "Repeat",
@@ -342,7 +346,11 @@
       "BEAN_DATA_FARMER": "Add the farmer",
       "BEAN_DATA_ELEVATION": "In which elevation was the bean grown",
       "BEAN_DATA_HARVEST_TIME": "In which time was the bean harvested?",
-      "BEAN_DATA_CERTIFICATION": "Add the bean certification",
+      "BEAN_DATA_CERTIFICATION": "Add the bean certification (e.g. fair trade, bio)",
+      "BEAN_DATA_ROASTING_TYPE": "Add the roast type",
+      "BEAN_DATA_DECAFFEINATED": "Is this coffee decaffeinated",
+      "BEAN_DATA_URL": "Add the website url",
+      "BEAN_DATA_EAN": "Add the ean or article number",
       "NOTES": "Add notes about these beans"
     }
   },
