--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -146,9 +146,9 @@
   "BREW_DATA_BREW_BEVERAGE_QUANTITY": "Beverage quantity (gr/ml)",
   "ONE_DAY": "Day",
   "DAYS": "Days",
-  "ONE_HOUR": "One hour",
+  "ONE_HOUR": "hour",
   "HOURS": "hours",
-  "ONE_MINUTE": "One minute",
+  "ONE_MINUTE": "minute",
   "MINUTES": "minutes",
   "WITHOUT_COFFEE": "without coffee",
   "NOT_FOUND": "Not found",
@@ -316,6 +316,7 @@
   "PREPARATION_TYPE_COLD_BREW": "Cold Brew",
   "PREPARATION_TYPE_AEROPRESS_INVERTED": "Aeropress Inverted",
   "PREPARATION_TYPE_TURKISH": "Turkish",
+  "PREPARATION_TYPE_BLUE_DRIPPER": "Blue Dripper",
   "PREPARATION_TYPE_ADD_CUSTOM": "Add Custom Method",
   "CHOOSE_BEANS": "Select Beans",
   "CHOOSE_BEAN": "Select Bean",
@@ -423,9 +424,15 @@
   "CUSTOM_DEFAULT_PARAMETERS": "Default",
   "CUSTOM_MANAGE_PARAMETERS": "Manage",
   "CUSTOM_SORT_PARAMETERS": "Sort",
-  "BREW_PARAMETER_CUSTOMIZE_TITLE": "Individuelle Parameter pro Zubereitungsart",
-  "BREW_PARAMETER_CUSTOMIZE_DESCRIPTION": "Du willst für einzelne Zubereitungsarten verschiedene Parameter festlegen? Navigiere dazu zum Menüpunkt \"Zubereitung\", öffne das Menü der entsprechenden Zubereitungsart und klicke auf \"Parameter individualisieren\". Lege nun fest, welche Parameter nur für diese Zubereitungsmethode erfasst werden sollen!",
-  "BREW_DATA_BREW_QUANTITY_TOOLTIP": "Amount of water just for filter coffee",
+  "BREW_PARAMETER_CUSTOMIZE_TITLE": "Custom parameters for each preparation method",
+  "BREW_PARAMETER_CUSTOMIZE_DESCRIPTION": "You want to choose custom parameters for each preparation method? Navigate to  \"Methods\", open the menu of the specific preparation method and choose  \"Customize parameters\". Now you can choose which parameters will be used for this preparation!",
+  "BREW_DATA_BREW_QUANTITY_TOOLTIP": "Amount of water not usable for espresso",
+  "BREW_DATA_COFFEE_FIRST_DRIP_TIME_TOOLTIP": "First coffee drip just usable for espresso",
   "BREW_DATA_PREPARATION_METHOD_TOOLTIP": "Preparation just customizeable when active",
-  "PAGE_SETTINGS_GENERAL": "General settings"
+  "PAGE_SETTINGS_GENERAL": "General settings",
+  "EDIT_PREPARATION_CUSTOM_PARAMETERS": "Customize parameters",
+  "ENABLE_PREPARATION_CUSTOM_PARAMETERS": "Use individual parameter",
+  "BEAN_ADD_ANOTHER_SORT": "Add another sort",
+  "BEAN_SORT": "Sort",
+  "NAVIGATE_TO_PREPARATION_METHODS": "Navigate to preparations"
 }
