#143 - Added first bean filtering

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -435,5 +435,14 @@
   "NAVIGATE_TO_PREPARATION_METHODS": "Zu den Zubereitungsmethoden",
   "PREPARATION_TOOLS": "Brühmethoden Tools",
   "PREPARATION_TOOLS_INFORMATION": "Füge für Siebträger deine verschiedenen Siebe hinzu. Bei einer V60 oder auch Aeropress deine Unterschiedlichen Papier/Stoff/Metallfilter usw.",
-  "PREPARATION_TOOLS_PLACEHOLDER": "Papierfilter, Stofffilter, VST-20g, 14g-Sieb, etc."
+  "PREPARATION_TOOLS_PLACEHOLDER": "Papierfilter, Stofffilter, VST-20g, 14g-Sieb, etc.",
+  "PREPARATION_PARAMETERS_CUSTOMIZED": "Parameter individualisiert",
+  "BEANS_LEFT_OVER": "Verbrauchbare Bohnenmenge",
+  "SORT_ORDER": "Sortierung ändern",
+  "ASCENDING": "aufsteigend",
+  "DESCENDING": "absteigend",
+  "SORT_AFTER": "Sotieren nach",
+  "BEAN_SORT_NAME_OF_BEAN": "Name der Bohne",
+  "BEAN_SORT_ROASTER": "Röster",
+  "BEAN_SORT_ROASTING_DATE": "Röstdatum"
 }
